# c2pa-rust-test

./: Cargo.toml
src/: helpers.rs  main.rs
src/helpers/: add.rs  show.rs  sign.rs
