[package]
name = "c2pa-rust-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.40"
c2pa = {version="0.32.0", features = ["unstable_api", "file_io"] }
ureq = { version = "*", features = ["json", "charset"] }
pem = "3.0.2"
ed25519-dalek = "2.0.0-rc.3"
tempfile = "3.10.1"
serde = { version = "1.0", features = ["derive"] }